<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nome"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="textPersonName"
        android:id="@+id/nome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Telefone"
        android:inputType="phone"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/telefone"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:background="@color/colorAccent"
        android:textColor="#FFF"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_salvar"
        android:onClick="SalvarContato"/>

</LinearLayout>
